--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.5",
+    "react-markdown": "^9.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
+    "remark-gfm": "^4.0.0",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
